# magic

./: .gitignore  Cargo.toml  README.md
magic/: Cargo.toml
magic/src/: lib.rs
magic_core/: Cargo.toml
magic_core/src/: lib.rs  mana.rs  phase.rs  traits.rs  type_.rs
magic_core/src/card/: mod.rs  type_line.rs
magic_macros/: Cargo.toml
magic_macros/src/: lib.rs  ser.rs
mtgjson/: Cargo.toml
mtgjson/src/: lib.rs
scryfall/: Cargo.toml
scryfall/examples/: client.rs
scryfall/src/: client.rs  lib.rs  object.rs
scryfall/tests/: client.rs
src/: lib.rs  mana.rs  phase.rs  type_.rs
src/card/: mod.rs  type_line.rs
src/macros/: mod.rs  ser.rs
