[package]
name = "magic_core"
version = "0.1.0"
authors = ["Michael Morgan <michael.morgan@mind-over-data.com>"]
edition = "2018"

[dependencies]
indexmap = "1.0.1"
serde = { version = "1.0.79", features = ["derive"] }
lazy_static = "1.1.0"
magic_macros = { path = "../magic_macros" }


[dev-dependencies]
serde_json = "1.0.32"