[package]
name = "mtgjson"
version = "0.1.0"
authors = ["Michael Morgan <michael.morgan@mind-over-data.com>"]
edition = "2018"

[dependencies]
magic_core = { path = "../magic_core" }
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
hashbrown = "0.1.0"
hex = "0.3.2"
chrono = { version = "0.4.6", features = ["serde"] }