[package]
name = "scryfall"
version = "0.1.0"
authors = ["Michael Morgan <michael.morgan@mind-over-data.com>"]
edition = "2018"

[dependencies]
magic_core = { path = "../magic_core" }
http = "0.1.13"
futures = "0.1.25"
num_cpus = "1.8.0"
reqwest = "0.9.4"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0.32"
tokio = "0.1.11"
uuid = { version = "0.7.1", features = ["serde"] }
hyper = "0.12.14"